<resources>
    <string name="app_name">SaleManager</string>
    <string name="splash_screen_et_hint">Please input your name !</string>
    <string name="splash_screen_confirm">Confirm</string>
    <string name="toast_save_success">Save success</string>
    <string name="private_">Personal</string>
    <string name="company">Company</string>
    <string name="bill">Bill</string>
    <string name="sort">Sort</string>
    <string name="filler">Filter</string>
    <string name="name">Name</string>
    <string name="all">All</string>
    <string name="no_data">No data available</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="note">Note</string>
    <string name="sex">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="save">Save</string>
    <string name="add_to_company">Add to Company</string>
    <string name="private_no_phone">Not found phone number of this person !</string>
    <string name="home">Home</string>
    <string name="mobile">Mobile</string>
    <string name="work">Work</string>
    <string name="order">Order</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="ask_read_contact">Let our access your contacts to perform this action ?</string>
    <string name="import_from_contact">Update from Phone Contacts</string>
    <string name="loading">Loading ... </string>
    <string name="contacting_google">Contacting Google ...</string>
    <string name="get_contact">Authenticated. Getting Google Contacts ... </string>
    <string name="get_contact_phone">Updating from Phone Contacts ... </string>
    <string name="get_contact_fail">Failed to get Contacts</string>
    <string name="no_contact_found">No Contact Found</string>
    <string name="import_from_contacts">Import from contacts</string>
    <string name="import_contact_success">Import contacts success !</string>
    <string name="chooser">Please choose phone number !</string>
    <string name="name_emplty">Please input your name</string>
    <string name="min_lenge">The minimum length is 3 characters</string>
    <string name="max_lenge">The maximum length is 20 characters</string>
    <string name="add_name_hint">Please input name</string>
    <string name="add_mail_hint">Please input email</string>
    <string name="add_address_hint">Please input address</string>
    <string name="add_phone_hint">Please input phone</string>
    <string name="add_note_hint">Please input note</string>
    <string name="add_phone_error">The valid phone number is : 0-9</string>
    <string name="add_mail_error">The valid email address is : abc@axz.xxx</string>
</resources>
