<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/imgPrivate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/private_button_style"/>

        <TextView
            android:id="@+id/txtPrivate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/private_"
            android:textColor="@color/colorBlue"
            android:textSize="18dp" />

        <ImageButton
            android:id="@+id/imgCompany"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/company_button_style"/>

        <TextView
            android:id="@+id/txtCompany"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/company"
            android:textColor="@color/colorGreen"
            android:textSize="18dp" />

        <ImageButton
            android:id="@+id/imgBill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bill_button_style"/>

        <TextView
            android:id="@+id/txtBill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bill"
            android:textColor="@color/colorRed"
            android:textSize="18dp" />

    </LinearLayout>
</LinearLayout>