<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="top">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:gravity="center">

                <ImageView
                    android:id="@+id/imgLogo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|center"
                android:orientation="vertical">

                <include
                    android:id="@+id/inputName"
                    layout="@layout/input_text" />

                <include
                    android:id="@+id/inputAddress"
                    layout="@layout/input_text" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|left"
                    android:orientation="horizontal">

                    <include
                        android:id="@+id/inputPhone"
                        layout="@layout/input_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.6" />

                    <ImageView
                        android:id="@+id/imgAdd"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4" />
                </LinearLayout>



                <LinearLayout
                    android:id="@+id/lnParentPhone2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|left"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <include
                        android:id="@+id/inputPhone2"
                        layout="@layout/input_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.6" />

                    <Spinner
                        android:id="@+id/spPhone2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lnParentPhone3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|left"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <include
                        android:id="@+id/inputPhone3"
                        layout="@layout/input_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.6" />

                    <Spinner
                        android:id="@+id/spPhone3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lnParentPhone4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|left"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <include
                        android:id="@+id/inputPhone4"
                        layout="@layout/input_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.6" />

                    <Spinner
                        android:id="@+id/spPhone4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/lnParentPhone5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|left"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <include
                        android:id="@+id/inputPhone5"
                        layout="@layout/input_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.6" />

                    <Spinner
                        android:id="@+id/spPhone5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4" />
                </LinearLayout>

                <include
                    android:id="@+id/inputEmail"
                    layout="@layout/input_text" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/option_margin"
                    android:orientation="horizontal">

                    <RadioGroup
                        android:id="@+id/radioGroupSex"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radioMale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/option_margin_next"
                            android:checked="true"
                            android:text="@string/male"
                            android:textSize="18dp" />

                        <RadioButton
                            android:id="@+id/radioFemale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="false"
                            android:text="@string/female"
                            android:textSize="18dp" />
                    </RadioGroup>
                </LinearLayout>

                <include
                    android:id="@+id/inputNote"
                    layout="@layout/input_text" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.7"
                    android:gravity="top|center"
                    android:layout_marginTop="@dimen/data_text_size"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/option_margin"
                        android:gravity="center|left"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btnSave"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            android:layout_marginTop="6dp"
                            android:layout_weight="0.5"
                            android:background="@drawable/button_style"
                            android:text="@string/save"
                            android:textColor="@color/white" />

                        <Button
                            android:id="@+id/btnAdd"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            android:layout_marginTop="6dp"
                            android:layout_weight="0.5"
                            android:background="@drawable/button_style"
                            android:text="@string/add_to_company"
                            android:textColor="@color/white" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/option_margin"
                        android:gravity="center|left"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btnImport"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            android:layout_marginTop="6dp"
                            android:background="@drawable/button_style"
                            android:text="@string/import_from_contact"
                            android:textColor="@color/white" />
                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>